test/should-fail/vsgc1457.f3
/*
 * @test/compile-error
 */
var v:Void;
